--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,7 +23,9 @@
     <dimen name="settings_element_height">60dp</dimen>
     <dimen name="margin_top_80">80dp</dimen>
     <dimen name="primary_text_size_13">13sp</dimen>
+    <dimen name="primary_text_size_14">14sp</dimen>
     <dimen name="primary_text_size_16">16sp</dimen>
+    <dimen name="primary_text_size_19">19sp</dimen>
     <dimen name="primary_text_size_22">22sp</dimen>
 
 </resources>
