--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -13,20 +13,17 @@
         android:layout_width="@dimen/album_image_size"
         android:layout_height="@dimen/album_image_size"
         android:layout_marginStart="@dimen/padding12"
-        android:layout_marginTop="@dimen/padding8"
         android:layout_marginEnd="@dimen/padding8"
-        android:layout_marginBottom="@dimen/padding8"
+        android:layout_marginVertical="@dimen/padding8"
         android:scaleType="centerCrop"
         tools:src="@drawable/default_album_image" />
-
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingTop="@dimen/padding12"
-        android:paddingBottom="@dimen/padding12">
+        android:layout_marginVertical="@dimen/padding12">
 
         <TextView
             android:id="@+id/track_name"
