--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/margin_on_the_edges"
-    tools:context=".presentation.ui.settings.SettingsActivity">
+    tools:context=".presentation.ui.settings.activity.SettingsActivity">
 
     <LinearLayout
         android:id="@+id/panel_heade"
