--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="edit_text_height">36dp</dimen>
     <dimen name="height40">40dp</dimen>
     <dimen name="album_image_size">45dp</dimen>
+    <dimen name="padding48">48dp</dimen>
     <dimen name="button_back_size">48dp</dimen>
     <dimen name="button_switch_compat_height">48dp</dimen>
     <dimen name="linear_layout_for_edit_text_height">52dp</dimen>
@@ -23,11 +24,13 @@
     <dimen name="height_panel_header">56dp</dimen>
     <dimen name="settings_element_height">60dp</dimen>
     <dimen name="margin_top_80">80dp</dimen>
+    <dimen name="margin_top_108">108dp</dimen>
     <dimen name="primary_text_size_13">13sp</dimen>
     <dimen name="primary_text_size_14">14sp</dimen>
     <dimen name="primary_text_size_15">15sp</dimen>
     <dimen name="primary_text_size_16">16sp</dimen>
     <dimen name="primary_text_size_19">19sp</dimen>
     <dimen name="primary_text_size_22">22sp</dimen>
+    <dimen name="primary_text_size_26">26sp</dimen>
 
 </resources>
