--- a/app/src/main/res/layout/library_activity.xml
+++ b/app/src/main/res/layout/library_activity.xml
@@ -6,45 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".presentation.ui.library.activity.LibraryActivity">
 
-
-    <ImageView
-        android:id="@+id/iv_button_back"
-        style="@style/SettingsActivityTitle"
-        android:layout_width="@dimen/button_back_size"
-        android:layout_height="@dimen/button_back_size"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/padding4"
-        android:layout_marginTop="@dimen/padding4"
-        android:clickable="true"
-        android:contentDescription="@string/title_back"
-        android:focusable="true"
-        android:src="@drawable/button_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
+        android:id="@+id/tv_title"
         style="@style/SettingsActivityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding16"
+        android:layout_marginStart="@dimen/padding16"
         android:layout_gravity="center"
-        android:layout_marginStart="@dimen/padding12"
         android:fontFamily="@font/ys_display_medium"
         android:gravity="center_vertical"
         android:text="@string/button_library_text"
         android:textAppearance="@style/Title"
         android:textSize="@dimen/primary_text_size_26"
-        app:layout_constraintBottom_toBottomOf="@id/iv_button_back"
-        app:layout_constraintStart_toEndOf="@id/iv_button_back"
-        app:layout_constraintTop_toTopOf="@id/iv_button_back" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_library"
         style = "@style/tab_item_style_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding16"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_button_back"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_library"
