--- a/app/src/main/res/layout/library_fragment.xml
+++ b/app/src/main/res/layout/library_fragment.xml
@@ -6,30 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".presentation.ui.library.fragments.LibraryFragment">
 
-    <TextView
+    <Toolbar
         android:id="@+id/tv_title"
         style="@style/SettingsActivityTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding16"
-        android:layout_marginStart="@dimen/padding16"
-        android:layout_gravity="center"
-        android:fontFamily="@font/ys_display_medium"
-        android:gravity="center_vertical"
-        android:text="@string/button_library_text"
-        android:textAppearance="@style/Title"
-        android:textSize="@dimen/primary_text_size_26"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/ys_display_medium"
+        android:title="@string/button_library_text"
+        android:titleTextAppearance="@style/toolbar_style"
+        />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_library"
         style = "@style/tab_item_style_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding16"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:tabTextAppearance="@style/text_appearance"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_library"
