--- a/app/src/main/res/layout/root_activity.xml
+++ b/app/src/main/res/layout/root_activity.xml
@@ -14,20 +14,31 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_navigation_graph"
 
-        app:layout_constraintBottom_toTopOf="@id/bnv_bottom_panel"
+        app:layout_constraintBottom_toTopOf="@id/separator_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:id="@+id/separator_line"
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:background="@color/yp_light_gray"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bnv_bottom_panel"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_bottom_panel"
         style="@style/bottom_panel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
+        android:fontFamily="@font/ys_display_medium"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
+        app:itemRippleColor="@color/yp_blue"
         app:menu="@menu/bottom_navigate_menu"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
