--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -6,20 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/margin_on_the_edges"
     tools:context=".presentation.ui.settings.fragment.SettingsFragment">
 
-        <TextView
-            android:id="@+id/title_settings"
-            style="@style/SettingsActivityTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/ys_display_medium"
-            android:gravity="center_vertical"
-            android:text="@string/title_settings"
-            android:textAppearance="@style/Title"
-            android:textSize="@dimen/primary_text_size_26" />
+    <Toolbar
+        android:id="@+id/tv_title"
+        style="@style/SettingsActivityTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ys_display_medium"
+        android:title="@string/title_settings"
+        android:titleTextAppearance="@style/toolbar_style"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout
@@ -27,7 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_24"
         android:minHeight="@dimen/settings_element_height"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/padding16">
 
         <TextView
             style="@style/SettingsActivityTextColor"
@@ -56,7 +55,8 @@
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
         android:minHeight="@dimen/settings_element_height"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/padding16">
 
         <TextView
             style="@style/SettingsActivityTextColor"
@@ -78,7 +78,8 @@
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
         android:minHeight="@dimen/settings_element_height"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/padding16">
 
         <TextView
             style="@style/SettingsActivityTextColor"
@@ -100,7 +101,8 @@
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
         android:minHeight="@dimen/settings_element_height"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/padding16">
 
         <TextView
             style="@style/SettingsActivityTextColor"
