--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -15,6 +15,7 @@
     <style name="bottom_panel">
         <item name="itemTextColor">@color/bottom_nav_color_dark</item>
         <item name="itemIconTint">@color/bottom_nav_color_dark</item>
+        <item name="android:background">@color/yp_black</item>
     </style>
 
     <!-- Стили для экрана Настроек -->
@@ -60,6 +61,10 @@
         <item name="tint">@color/white</item>
     </style>
 
+    <style name="title_you_were_looking_for">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="MessageError">
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">@color/white</item>
@@ -85,6 +90,12 @@
     </style>
 
     <!-- Стили для экрана Медиатеки -->
+
+    <style name="toolbar_style">
+        <item name="android:textSize">@dimen/primary_text_size_26</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="tab_item_style_1">
         <item name="tabTextColor">@color/white</item>
