--- a/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
+++ b/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:orientation="vertical"
-    android:padding="@dimen/padding8">
-
+    android:paddingHorizontal="@dimen/padding8"
+    android:paddingVertical="@dimen/padding4">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         card_view:cardCornerRadius="@dimen/padding8"
         card_view:cardElevation="0dp"
-        android:backgroundTint="@android:color/transparent">
+        card_view:layout_constraintStart_toStartOf="parent"
+        card_view:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_playlist_image"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_album_image" />
     </androidx.cardview.widget.CardView>
 
-
     <TextView
         android:id="@+id/tv_playlist_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding4"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
         android:maxLines="1"
         android:textSize="@dimen/primary_text_size_16"
+        card_view:layout_constraintStart_toEndOf="@id/cv"
+        card_view:layout_constraintTop_toTopOf="@id/cv"
         tools:text="Название альбома" />
 
     <TextView
         android:id="@+id/tv_tracks_count"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/padding4"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
         android:maxLines="1"
         android:textSize="@dimen/primary_text_size_16"
+        card_view:layout_constraintStart_toEndOf="@id/cv"
+        card_view:layout_constraintTop_toBottomOf="@id/tv_playlist_name"
         tools:text="Количество треков" />
 
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
