--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -35,7 +35,11 @@
         android:id="@+id/playerFragment"
         android:name="com.example.playlistmaker.presentation.ui.player.fragment.PlayerFragment"
         android:label="player_fragment"
-        tools:layout="@layout/player_fragment" />
+        tools:layout="@layout/player_fragment" >
+        <action
+            android:id="@+id/action_playerFragment_to_newPlaylistFragment"
+            app:destination="@id/newPlaylistFragment" />
+    </fragment>
     <fragment
         android:id="@+id/newPlaylistFragment"
         android:name="com.example.playlistmaker.presentation.ui.new_playlist.fragment.NewPlaylistFragment"
