--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -141,7 +141,7 @@
 
 
     <!-- Стили для экрана создания нового альбома -->
-    <style name="PlayListCreateTextInputLayout"
+    <style name="play_list_create_text_input_layout"
         parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -153,6 +153,19 @@
         <item name="boxCornerRadiusTopStart">8dp</item>
     </style>
 
+    <!-- Стиль для BottomSheet на экране аудиоплеера  -->
+
+    <style name="bottom_sheet_audoi_player"
+        parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="boxCornerRadiusTopEnd">8dp</item>
+        <item name="boxCornerRadiusTopStart">8dp</item>
+    </style>
+
+    <style name="bottom_sheet_title_style">
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 
 </resources>
